--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,14 @@
         android:theme="@style/Theme.PR8"
         tools:targetApi="31">
         <activity
-            android:label="@string/name"
+            android:name=".note"
+            android:exported="false"
+            android:label="@string/title_activity_note"
+            android:theme="@style/Theme.PR8" />
+        <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:label="@string/name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
